fixed header overflow

--- a/facebook/src/components/Header.css
+++ b/facebook/src/components/Header.css
@@ -1,5 +1,5 @@
 .header__root {
-  padding: 1vh 1.5vw;
+  padding: 10px 15px;
   display: flex;
   justify-content: space-between;
   position: sticky;
@@ -7,7 +7,6 @@
   z-index: 10;
   top: 0;
   box-shadow: 0px 5px 8px -9px rgba(0, 0, 0, .75);
-  width: 100%;
 }
 
 .header__left {
